Deploy bugsnag/bugsnag-ruby page docs for v6.11.1

--- a/classes/Bugsnag/Middleware.html
+++ b/classes/Bugsnag/Middleware.html
@@ -28,6 +28,15 @@ Bugsnag::Middleware
 </h1>
 <ol class='paths'>
 <li>
+<a href="../../files/lib/bugsnag/integrations/delayed_job_rb.html">lib/bugsnag/integrations/delayed_job.rb</a>
+</li>
+<li class='other'>
+<a href="../../files/lib/bugsnag/integrations/mailman_rb.html">lib/bugsnag/integrations/mailman.rb</a>
+</li>
+<li class='other'>
+<a href="../../files/lib/bugsnag/integrations/rack_rb.html">lib/bugsnag/integrations/rack.rb</a>
+</li>
+<li class='other'>
 <a href="../../files/lib/bugsnag/integrations/railtie_rb.html">lib/bugsnag/integrations/railtie.rb</a>
 </li>
 <li class='other'>
@@ -37,6 +46,9 @@ Bugsnag::Middleware
 <a href="../../files/lib/bugsnag/integrations/sidekiq_rb.html">lib/bugsnag/integrations/sidekiq.rb</a>
 </li>
 <li class='other'>
+<a href="../../files/lib/bugsnag/middleware/breadcrumbs_rb.html">lib/bugsnag/middleware/breadcrumbs.rb</a>
+</li>
+<li class='other'>
 <a href="../../files/lib/bugsnag/middleware/callbacks_rb.html">lib/bugsnag/middleware/callbacks.rb</a>
 </li>
 <li class='other'>
@@ -44,6 +56,9 @@ Bugsnag::Middleware
 </li>
 <li class='other'>
 <a href="../../files/lib/bugsnag/middleware/clearance_user_rb.html">lib/bugsnag/middleware/clearance_user.rb</a>
+</li>
+<li class='other'>
+<a href="../../files/lib/bugsnag/middleware/delayed_job_rb.html">lib/bugsnag/middleware/delayed_job.rb</a>
 </li>
 <li class='other'>
 <a href="../../files/lib/bugsnag/middleware/exception_meta_data_rb.html">lib/bugsnag/middleware/exception_meta_data.rb</a>
@@ -88,9 +103,11 @@ Bugsnag::Middleware
 <div id='class-list'>
 <h2>Classes and Modules</h2>
 <ol>
+<li><a href="Middleware/Breadcrumbs.html">Bugsnag::Middleware::Breadcrumbs</a></li>
 <li><a href="Middleware/Callbacks.html">Bugsnag::Middleware::Callbacks</a></li>
 <li><a href="Middleware/ClassifyError.html">Bugsnag::Middleware::ClassifyError</a></li>
 <li><a href="Middleware/ClearanceUser.html">Bugsnag::Middleware::ClearanceUser</a></li>
+<li><a href="Middleware/DelayedJob.html">Bugsnag::Middleware::DelayedJob</a></li>
 <li><a href="Middleware/ExceptionMetaData.html">Bugsnag::Middleware::ExceptionMetaData</a></li>
 <li><a href="Middleware/IgnoreErrorClass.html">Bugsnag::Middleware::IgnoreErrorClass</a></li>
 <li><a href="Middleware/Mailman.html">Bugsnag::Middleware::Mailman</a></li>
