--- a/classes/Delayed.html
+++ b/classes/Delayed.html
@@ -30,6 +30,12 @@ Delayed
 <li>
 <a href="../files/lib/bugsnag/integrations/delayed_job_rb.html">lib/bugsnag/integrations/delayed_job.rb</a>
 </li>
+<li class='other'>
+<a href="../files/lib/bugsnag/middleware/delayed_job_rb.html">lib/bugsnag/middleware/delayed_job.rb</a>
+</li>
+<li>
+<a class='show' href='#' onclick='this.parentNode.parentNode.className += &quot; expanded&quot;; this.parentNode.removeChild(this); return false'>show all</a>
+</li>
 </ol>
 </div>
 <div id='content'>
