--- a/classes/Delayed/Plugins/Bugsnag.html
+++ b/classes/Delayed/Plugins/Bugsnag.html
@@ -33,7 +33,7 @@ Delayed::Plugins::Bugsnag
 </ol>
 <div class='parent'>
 Superclass:
-<strong>Plugin</strong>
+<strong>Delayed::Plugin</strong>
 </div>
 </div>
 <div id='content'>
@@ -44,26 +44,10 @@ Superclass:
 <div id='class-list'>
 <h2>Classes and Modules</h2>
 <ol>
-<li><a href="Bugsnag/Notify.html">Delayed::Plugins::Bugsnag::Notify</a></li>
+<li><a href="Bugsnag/Report.html">Delayed::Plugins::Bugsnag::Report</a></li>
 </ol>
 </div>
 <div id='section'>
-<div id='constants-list'>
-<h2>Constants</h2>
-<div class='name-list'>
-<table summary='Constants'>
-<tr class='top-aligned-row context-row'>
-<td class='context-item-name'>FRAMEWORK_ATTRIBUTES</td>
-<td>=</td>
-<td class='context-item-value'>{
-:framework => "DelayedJob"
-}</td>
-<td>&nbsp;</td>
-<td class='context-item-desc'></td>
-</tr>
-</table>
-</div>
-</div>
 </div>
 
 </div>
