--- a/classes/Mongo.html
+++ b/classes/Mongo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
 <head>
-<title>Sidekiq</title>
+<title>Mongo</title>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
 <link href='../css/style.css' media='screen' rel='stylesheet' type='text/css'>
 <script type='text/javascript'>
@@ -24,11 +24,11 @@
 <div class='class' id='wrapper'>
 <div class='header'>
 <h1 class='name'><span class='type'>module</span>
-Sidekiq
+Mongo
 </h1>
 <ol class='paths'>
 <li>
-<a href="../files/lib/bugsnag/integrations/sidekiq_rb.html">lib/bugsnag/integrations/sidekiq.rb</a>
+<a href="../files/lib/bugsnag/integrations/mongo_rb.html">lib/bugsnag/integrations/mongo.rb</a>
 </li>
 </ol>
 </div>
@@ -36,6 +36,12 @@ Sidekiq
 <div id='text'>
 <div id='description'></div>
 <div id='context'>
+</div>
+<div id='class-list'>
+<h2>Classes and Modules</h2>
+<ol>
+<li><a href="Mongo/Monitoring.html">Mongo::Monitoring</a></li>
+</ol>
 </div>
 <div id='section'>
 </div>
