--- a/files/lib/bugsnag/configuration_rb.html
+++ b/files/lib/bugsnag/configuration_rb.html
@@ -30,7 +30,7 @@ lib/bugsnag/configuration.rb
 </div>
 <div class='last-update'>
 Last Update:
-<span class='datetime'>2018-07-11 16:43:00 +0000</span>
+<span class='datetime'>2019-01-17 10:23:52 +0000</span>
 </div>
 </div>
 <div id='content'>
@@ -50,6 +50,9 @@ Last Update:
 <li>bugsnag/middleware/suggestion_data</li>
 <li>bugsnag/middleware/classify_error</li>
 <li>bugsnag/middleware/session_data</li>
+<li>bugsnag/middleware/breadcrumbs</li>
+<li>bugsnag/utility/circular_buffer</li>
+<li>bugsnag/breadcrumbs/breadcrumbs</li>
 </ol>
 </div>
 </div>
