--- a/files/lib/bugsnag/integrations/railtie_rb.html
+++ b/files/lib/bugsnag/integrations/railtie_rb.html
@@ -30,7 +30,7 @@ lib/bugsnag/integrations/railtie.rb
 </div>
 <div class='last-update'>
 Last Update:
-<span class='datetime'>2018-07-11 16:43:00 +0000</span>
+<span class='datetime'>2019-01-17 10:23:52 +0000</span>
 </div>
 </div>
 <div id='content'>
@@ -42,10 +42,12 @@ Last Update:
 <div id='requires'>
 <h2>Required files</h2>
 <ol>
+<li>json</li>
 <li>rails</li>
 <li>bugsnag</li>
 <li>bugsnag/middleware/rails3_request</li>
 <li>bugsnag/middleware/rack_request</li>
+<li>bugsnag/integrations/rails/rails_breadcrumbs</li>
 <li>bugsnag/integrations/rake</li>
 <li>bugsnag/integrations/rails/controller_methods</li>
 <li>bugsnag/integrations/rails/active_record_rescue</li>
