--- a/fr_class_index.html
+++ b/fr_class_index.html
@@ -10,7 +10,13 @@
 <div id='index'><h1>Class Index</h1>
 <ol class='classes' id='index-entries'>
 <li><a href="classes/Bugsnag.html">Bugsnag</a>
-<ol><li><a href="classes/Bugsnag/Cleaner.html"><span class="parent">Bugsnag::</span>Cleaner</a>
+<ol><li><a href="classes/Bugsnag/Breadcrumbs.html"><span class="parent">Bugsnag::</span>Breadcrumbs</a>
+<ol><li><a href="classes/Bugsnag/Breadcrumbs/Breadcrumb.html"><span class="parent">Bugsnag::Breadcrumbs::</span>Breadcrumb</a>
+<ol>
+</ol></li><li><a href="classes/Bugsnag/Breadcrumbs/Validator.html"><span class="parent">Bugsnag::Breadcrumbs::</span>Validator</a>
+<ol>
+</ol></li>
+</ol></li><li><a href="classes/Bugsnag/Cleaner.html"><span class="parent">Bugsnag::</span>Cleaner</a>
 <ol>
 </ol></li><li><a href="classes/Bugsnag/Configuration.html"><span class="parent">Bugsnag::</span>Configuration</a>
 <ol>
@@ -27,11 +33,15 @@
 </ol></li><li><a href="classes/Bugsnag/MetaData.html"><span class="parent">Bugsnag::</span>MetaData</a>
 <ol>
 </ol></li><li><a href="classes/Bugsnag/Middleware.html"><span class="parent">Bugsnag::</span>Middleware</a>
-<ol><li><a href="classes/Bugsnag/Middleware/Callbacks.html"><span class="parent">Bugsnag::Middleware::</span>Callbacks</a>
+<ol><li><a href="classes/Bugsnag/Middleware/Breadcrumbs.html"><span class="parent">Bugsnag::Middleware::</span>Breadcrumbs</a>
+<ol>
+</ol></li><li><a href="classes/Bugsnag/Middleware/Callbacks.html"><span class="parent">Bugsnag::Middleware::</span>Callbacks</a>
 <ol>
 </ol></li><li><a href="classes/Bugsnag/Middleware/ClassifyError.html"><span class="parent">Bugsnag::Middleware::</span>ClassifyError</a>
 <ol>
 </ol></li><li><a href="classes/Bugsnag/Middleware/ClearanceUser.html"><span class="parent">Bugsnag::Middleware::</span>ClearanceUser</a>
+<ol>
+</ol></li><li><a href="classes/Bugsnag/Middleware/DelayedJob.html"><span class="parent">Bugsnag::Middleware::</span>DelayedJob</a>
 <ol>
 </ol></li><li><a href="classes/Bugsnag/Middleware/ExceptionMetaData.html"><span class="parent">Bugsnag::Middleware::</span>ExceptionMetaData</a>
 <ol>
@@ -55,6 +65,8 @@
 <ol>
 </ol></li>
 </ol></li><li><a href="classes/Bugsnag/MiddlewareStack.html"><span class="parent">Bugsnag::</span>MiddlewareStack</a>
+<ol>
+</ol></li><li><a href="classes/Bugsnag/MongoBreadcrumbSubscriber.html"><span class="parent">Bugsnag::</span>MongoBreadcrumbSubscriber</a>
 <ol>
 </ol></li><li><a href="classes/Bugsnag/Rack.html"><span class="parent">Bugsnag::</span>Rack</a>
 <ol>
@@ -82,19 +94,25 @@
 <ol>
 </ol></li><li><a href="classes/Bugsnag/Stacktrace.html"><span class="parent">Bugsnag::</span>Stacktrace</a>
 <ol>
+</ol></li><li><a href="classes/Bugsnag/Utility.html"><span class="parent">Bugsnag::</span>Utility</a>
+<ol><li><a href="classes/Bugsnag/Utility/CircularBuffer.html"><span class="parent">Bugsnag::Utility::</span>CircularBuffer</a>
+<ol>
+</ol></li>
 </ol></li>
 </ol></li><li><a href="classes/BugsnagGenerator.html">BugsnagGenerator</a>
 <ol>
 </ol></li><li><a href="classes/Delayed.html">Delayed</a>
 <ol><li><a href="classes/Delayed/Plugins.html"><span class="parent">Delayed::</span>Plugins</a>
 <ol><li><a href="classes/Delayed/Plugins/Bugsnag.html"><span class="parent">Delayed::Plugins::</span>Bugsnag</a>
-<ol><li><a href="classes/Delayed/Plugins/Bugsnag/Notify.html"><span class="parent">Delayed::Plugins::Bugsnag::</span>Notify</a>
+<ol><li><a href="classes/Delayed/Plugins/Bugsnag/Report.html"><span class="parent">Delayed::Plugins::Bugsnag::</span>Report</a>
 <ol>
 </ol></li>
 </ol></li>
 </ol></li>
-</ol></li><li><a href="classes/Gem.html">Gem</a>
+</ol></li><li><a href="classes/Mongo.html">Mongo</a>
+<ol><li><a href="classes/Mongo/Monitoring.html"><span class="parent">Mongo::</span>Monitoring</a>
 <ol>
+</ol></li>
 </ol></li><li><a href="classes/Rake.html">Rake</a>
 <ol><li><a href="classes/Rake/Task.html"><span class="parent">Rake::</span>Task</a>
 <ol>
@@ -105,8 +123,6 @@
 <ol>
 </ol></li>
 </ol></li>
-</ol></li><li><a href="classes/Sidekiq.html">Sidekiq</a>
-<ol>
 </ol></li>
 </ol>
 </div>
