--- a/classes/Bugsnag/Utility.html
+++ b/classes/Bugsnag/Utility.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang='en'>
 <head>
-<title>Gem</title>
+<title>Bugsnag::Utility</title>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
-<link href='../css/style.css' media='screen' rel='stylesheet' type='text/css'>
+<link href='../../css/style.css' media='screen' rel='stylesheet' type='text/css'>
 <script type='text/javascript'>
   function popupCode(url) {
     window.open(url, "Code", "resizable=yes,scrollbars=yes,toolbar=no,status=no,height=150,width=400")
@@ -24,11 +24,11 @@
 <div class='class' id='wrapper'>
 <div class='header'>
 <h1 class='name'><span class='type'>module</span>
-Gem
+Bugsnag::Utility
 </h1>
 <ol class='paths'>
 <li>
-<a href="../files/lib/bugsnag/integrations/sidekiq_rb.html">lib/bugsnag/integrations/sidekiq.rb</a>
+<a href="../../files/lib/bugsnag/utility/circular_buffer_rb.html">lib/bugsnag/utility/circular_buffer.rb</a>
 </li>
 </ol>
 </div>
@@ -36,6 +36,12 @@ Gem
 <div id='text'>
 <div id='description'></div>
 <div id='context'>
+</div>
+<div id='class-list'>
+<h2>Classes and Modules</h2>
+<ol>
+<li><a href="Utility/CircularBuffer.html">Bugsnag::Utility::CircularBuffer</a></li>
+</ol>
 </div>
 <div id='section'>
 </div>
