--- a/files/README_md.html
+++ b/files/README_md.html
@@ -30,7 +30,7 @@ README.md
 </div>
 <div class='last-update'>
 Last Update:
-<span class='datetime'>2018-07-11 16:43:00 +0000</span>
+<span class='datetime'>2019-01-22 10:19:31 +0000</span>
 </div>
 </div>
 <div id='content'>
@@ -59,6 +59,8 @@ be sent to your <a href="../classes/Bugsnag.html">Bugsnag</a> project.</p>
 crash</p>
 </li><li>
 <p>Send customized diagnostic data</p>
+</li><li>
+<p>Track events that occur leading up to a crash</p>
 </li></ul>
 
 <h2 id="label-Getting+started">Getting started<span><a href="#label-Getting+started">&para;</a> <a href="#top">&uarr;</a></span></h2>
