--- a/files/lib/bugsnag_rb.html
+++ b/files/lib/bugsnag_rb.html
@@ -30,7 +30,7 @@ lib/bugsnag.rb
 </div>
 <div class='last-update'>
 Last Update:
-<span class='datetime'>2018-07-11 16:43:00 +0000</span>
+<span class='datetime'>2019-01-17 10:23:52 +0000</span>
 </div>
 </div>
 <div id='content'>
@@ -63,6 +63,10 @@ Last Update:
 <li>bugsnag/middleware/rake</li>
 <li>bugsnag/middleware/callbacks</li>
 <li>bugsnag/middleware/classify_error</li>
+<li>bugsnag/middleware/delayed_job</li>
+<li>bugsnag/breadcrumbs/validator</li>
+<li>bugsnag/breadcrumbs/breadcrumb</li>
+<li>bugsnag/breadcrumbs/breadcrumbs</li>
 <li>bugsnag/integrations/railtie</li>
 </ol>
 </div>
