--- a/fr_file_index.html
+++ b/fr_file_index.html
@@ -13,6 +13,9 @@
 <li><a href="files/CONTRIBUTING_md.html">CONTRIBUTING.md</a></li>
 <li><a href="files/README_md.html">README.md</a></li>
 <li class='other'><a href="files/lib/bugsnag_rb.html">bugsnag.rb</a></li>
+<li class='other'><a href="files/lib/bugsnag/breadcrumbs/breadcrumb_rb.html">breadcrumb.rb</a></li>
+<li class='other'><a href="files/lib/bugsnag/breadcrumbs/breadcrumbs_rb.html">breadcrumbs.rb</a></li>
+<li class='other'><a href="files/lib/bugsnag/breadcrumbs/validator_rb.html">validator.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/cleaner_rb.html">cleaner.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/configuration_rb.html">configuration.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/delivery_rb.html">delivery.rb</a></li>
@@ -21,19 +24,23 @@
 <li class='other'><a href="files/lib/bugsnag/helpers_rb.html">helpers.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/integrations/delayed_job_rb.html">delayed_job.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/integrations/mailman_rb.html">mailman.rb</a></li>
+<li class='other'><a href="files/lib/bugsnag/integrations/mongo_rb.html">mongo.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/integrations/que_rb.html">que.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/integrations/rack_rb.html">rack.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/integrations/rails/active_record_rescue_rb.html">active_record_rescue.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/integrations/rails/controller_methods_rb.html">controller_methods.rb</a></li>
+<li class='other'><a href="files/lib/bugsnag/integrations/rails/rails_breadcrumbs_rb.html">rails_breadcrumbs.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/integrations/railtie_rb.html">railtie.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/integrations/rake_rb.html">rake.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/integrations/resque_rb.html">resque.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/integrations/shoryuken_rb.html">shoryuken.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/integrations/sidekiq_rb.html">sidekiq.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/meta_data_rb.html">meta_data.rb</a></li>
+<li class='other'><a href="files/lib/bugsnag/middleware/breadcrumbs_rb.html">breadcrumbs.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/middleware/callbacks_rb.html">callbacks.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/middleware/classify_error_rb.html">classify_error.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/middleware/clearance_user_rb.html">clearance_user.rb</a></li>
+<li class='other'><a href="files/lib/bugsnag/middleware/delayed_job_rb.html">delayed_job.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/middleware/exception_meta_data_rb.html">exception_meta_data.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/middleware/ignore_error_class_rb.html">ignore_error_class.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/middleware/mailman_rb.html">mailman.rb</a></li>
@@ -49,6 +56,7 @@
 <li class='other'><a href="files/lib/bugsnag/session_tracker_rb.html">session_tracker.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/stacktrace_rb.html">stacktrace.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/tasks_rb.html">tasks.rb</a></li>
+<li class='other'><a href="files/lib/bugsnag/utility/circular_buffer_rb.html">circular_buffer.rb</a></li>
 <li class='other'><a href="files/lib/bugsnag/version_rb.html">version.rb</a></li>
 <li class='other'><a href="files/lib/generators/bugsnag/bugsnag_generator_rb.html">bugsnag_generator.rb</a></li>
 <li>
